Added Email/Password authentication, need to add fall back to default data

--- a/Jasper/app.json
+++ b/Jasper/app.json
@@ -2,9 +2,34 @@
   "expo": {
     "name": "Jasper",
     "slug": "Jasper",
+    "icon":"./assets/imgs/icon.png",
     "version": "1.0.0",
+    "scheme": "uwjasper",
+    "ios": {
+      "bundleIdentifier": "com.uwinfo.jasper",
+      "buildNumber": "1.0.0"
+    },
+    "android": {
+      "package": "com.uwinfo.jasper",
+      "versionCode": 1
+    },
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ], 
+    "web": {
+      "config": {
+        "firebase": {
+          "apiKey": "AIzaSyDoO-15TP38J4Gzz4BlI3rFucgYkymFs04",
+          "authDomain": "uwjasper.firebaseapp.com",
+          "databaseURL": "https://uwjasper-default-rtdb.firebaseio.com",
+          "projectId": "uwjasper",
+          "storageBucket": "uwjasper.appspot.com",
+          "messagingSenderId": "393140379927",
+          "appId": "1:393140379927:web:09b62a59258415ffcad752",
+          "measurementId": "G-VQBW4GV8Z1"
+        }
+      }
+    }
+    
   }
 }
