--- a/Jasper/package.json
+++ b/Jasper/package.json
@@ -14,6 +14,8 @@
     "@firebase/auth": "^0.20.0",
     "@firebase/firestore": "^3.4.9",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^14.9.3",
+    "@react-native-firebase/auth": "^14.9.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/compat": "^5.3.20",
     "@react-navigation/native": "^6.0.10",
@@ -22,8 +24,10 @@
     "expo": "~45.0.0",
     "expo-app-loading": "^2.0.0",
     "expo-asset": "^8.5.0",
+    "expo-auth-session": "^3.6.1",
     "expo-font": "^10.1.0",
     "expo-image-picker": "^13.1.1",
+    "expo-random": "^12.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.0",
@@ -35,7 +39,8 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-screens": "~3.11.1",
     "react-native-star-rating": "^1.1.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "expo-linking": "~3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
