--- a/Jasper/package.json
+++ b/Jasper/package.json
@@ -39,8 +39,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-screens": "~3.11.1",
     "react-native-star-rating": "^1.1.0",
-    "react-native-web": "0.17.7",
-    "expo-linking": "~3.1.0"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
