--- a/Jasper/package.json
+++ b/Jasper/package.json
@@ -37,6 +37,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "~3.11.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-web": "0.17.7"
