--- a/Jasper/package.json
+++ b/Jasper/package.json
@@ -36,6 +36,7 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-native": "0.68.2",
+    "react-native-animated-loader": "^0.0.9",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "~3.11.1",
